feat: 로또 수동 구매 진행