@@ -1,9 +1,12 @@
 package lotto;
 
+import lotto.domain.*;
+import lotto.input.PassivityLottoInput;
+import lotto.input.PassivityNumberInput;
+import lotto.input.WinningNumberInput;
+import lotto.parser.WinningNumberParser;
+
 import java.util.ArrayList;
-import java.util.List;
-import java.util.Scanner;
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Scanner;
 
@@ -12,16 +15,29 @@ public class Application {
     private static final int MINIMUM_AMOUNT = 1000;
 
     public static void main(String[] args) {
-        int ticketCount = buyLotto();
-        List<InputLottoNumber> tickets = createTickets(ticketCount);
-        WinningNumberInput input = new WinningNumberInput();
-        WinningNumber winning = input.inputWinningNumber();
-        int ticketCount = buyLotto();
-        List<InputLottoNumber> tickets = createTickets(ticketCount);
-        WinningNumber winning = WinningNumber.inputWinningNumbers();
-        LottoStatus status = checkResult(tickets, winning);
-        printResults(status, ticketCount);
+        new Application().run();
     }
+
+    private void run() {
+        int ticketCount = buyLotto();
+        List<InputLottoNumber> ticket = prepareTicket(ticketCount);
+        WinningNumber winningNumber = new WinningNumberInput().inputWinningNumber();
+        LottoStatus lottoStatus = checkResult(ticket, winningNumber);
+        lottoStatus.print(ticketCount, MINIMUM_AMOUNT);
+    }
+
+    private List<InputLottoNumber> prepareTicket(int ticketCount) {
+        int passivityCount = new PassivityNumberInput(ticketCount).passivityLottoCount();
+        List<InputLottoNumber> passivityTicket = new PassivityLottoInput(
+                new WinningNumberParser()).inputPassivityTicket(passivityCount);
+        List<InputLottoNumber> auto = LottoCounter.generateAuto(ticketCount, passivityCount);
+        List<InputLottoNumber> totalTicket = new ArrayList<>();
+        totalTicket.addAll(passivityTicket);
+        totalTicket.addAll(auto);
+        System.out.printf("수동 %d장, 자동 %d장 구매 완료%n", passivityCount, ticketCount - passivityCount);
+        return totalTicket;
+    }
+
 
     private static int buyLotto() {
         Money money = new Money(inputMoney());
@@ -38,7 +54,7 @@ public class Application {
             List<Integer> picked = LottoManage.pickupLottoNumbers(lottoParts);
             List<LottoNumber> wrapped = picked.stream()
                     .map(LottoNumber::new)
-                    .collect(Collectors.toList());
+                            .toList();
 
             tickets.add(InputLottoNumber.of(wrapped));
         }
@@ -54,48 +70,6 @@ public class Application {
             status.record(MatchResult.of(ticket.countMatching(winning)));
         });
         return status;
-    }
-
-    private static void printResults(LottoStatus status, int ticketCount) {
-        System.out.println("\n당첨 통계\n---------");
-        status.print();
-        Money totalCost = new Money(ticketCount * MINIMUM_AMOUNT);
-        Money totalPayout = status.getTotalPrizeAmount();
-        double returnMoney = (double) totalPayout.getAmount() / totalCost.getAmount();
-        System.out.printf("총 수익률: %.2f 입니다.%n", returnMoney);
-        int money = inputMoney();
-        int count = money / MINIMUM_AMOUNT;
-        for (int i = 0; i < count; i++) {
-            List<Integer> lottoParts = LottoManage.pullOutNumbers();
-            LottoManage.shuffleNumbers(lottoParts);
-            List<Integer> picked = LottoManage.pickupLottoNumbers(lottoParts);
-            List<LottoNumber> wrapped = picked.stream()
-                    .map(LottoNumber::new)
-                    .toList();
-
-            tickets.add(InputLottoNumber.of(wrapped));
-        }
-        return tickets;
-    }
-
-    private static LottoStatus checkResult(
-            List<InputLottoNumber> tickets,
-            WinningNumber winning) {
-        LottoStatus status = new LottoStatus();
-        tickets.forEach(ticket -> {
-            System.out.println(ticket);
-            status.record(MatchResult.of(ticket.countMatching(winning)));
-        });
-        return status;
-    }
-
-    private static void printResults(LottoStatus status, int ticketCount) {
-        System.out.println("\n당첨 통계\n---------");
-        status.print();
-        Money totalCost = new Money(ticketCount * MINIMUM_AMOUNT);
-        Money totalPayout = status.getTotalPrizeAmount();
-        double returnMoney = (double) totalPayout.getAmount() / totalCost.getAmount();
-        System.out.printf("총 수익률: %.2f 입니다.%n", returnMoney);
     }
 
     private static int inputMoney() {
